--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
             var ajax = new XMLHttpRequest();
             //ajax.open('GET', 'https://agriculturepipeline.herokuapp.com/main/login' + u + '/' + p,false, "root", "password");
             try {
-                ajax.open('GET', "https://agriculturepipeline.herokuapp.com//main/isServerRunning', false);
+                ajax.open('GET', 'https://agriculturepipeline.herokuapp.com/main/isServerRunning', false);
                 ajax.send();
                 alert(ajax.responseText);
             }
