--- a/src/main/resources/static/Requests.html
+++ b/src/main/resources/static/Requests.html
@@ -28,13 +28,13 @@
                 }
             }
             catch (err) {
-                window.location = "http://127.0.0.1:5000/login";
+                alert(err);
             }
         }
 
     </script>
 </head>
-<body>
+<body onload="load()">
 <div style="float: middle;">
     <h1>
         Unanswered Questions
