--- a/src/main/resources/static/Requests.html
+++ b/src/main/resources/static/Requests.html
@@ -35,7 +35,7 @@
     </script>
 </head>
 <body onload="load()">
-<div style="float: middle;">
+<div align="middle">
     <h1>
         Unanswered Questions
     </h1>
