--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,60 +1,65 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Home Page</title>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript">
-        function logIn() {
-            var u = document.getElementById("username").value;
-            var p = document.getElementById("password").value;
-            var ajax = new XMLHttpRequest();
-            //ajax.open('GET', 'https://agriculturepipeline.herokuapp.com/main/login' + u + '/' + p,false, "root", "password");
-            try {
-                ajax.open('GET', 'https://agriculturepipeline.herokuapp.com/main/loginAdmin/' + u + '/' + p, false);
-                ajax.send();
-                if(ajax.responseText == 'true') {
-                    window.load('Requests.html')
+<html class="no-js" lang="en">
+    <head>
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>FarmEd Pipeline</title>
+        <script type="text/javascript">
+            function doFunc() {
+                var u = document.getElementById("username").value;
+                var p = document.getElementById("password").value;
+                var ajax = new XMLHttpRequest();
+                try {
+                    ajax.open('GET', 'https://agriculturepipeline.herokuapp.com/main/loginAdmin/' + u + '/' + p, false);
+                    ajax.send();
+                    if(ajax.responseText == 'true') {
+                        window.location = 'dashboard.html'
+                    }
+                    else {
+                        alert('Wrong Username or Password');
+                    }
                 }
-                else {
-                    alert('loginError');
+                catch (err) {
+                    alert(err)
                 }
             }
-            catch (err) {
-                window.location = "http://127.0.0.1:5000/login";
-            }
-        }
+        </script>
+    </head>
 
-    </script>
-</head>
-<body>
-<div class="row">
-    <div class="col-sm" style="background-color: #7158ef;">
-        <button onclick="createAccount()" style="margin: 10px; float: right; border-radius: 20px; background-color: #04e00b;">Create Account</button>
-    </div>
-</div>
-<div id="header" class="row" align="middle" style="height: 100px">
-</div>
-<div class="row">
-    <div class="col-sm-4"></div>
-    <div class="col-sm-4" align="middle" style="background-color: #7158ef; padding: 30px; border-radius: 15px;">
-        <h1> Log In </h1>
-        <input id="username" ng-model="username" placeholder="Username" style="margin-top: 20px; border-radius: 5px">  </input>
-        <br>
-        <input id="password" ng-model="username" placeholder="Password" style="margin-top: 20px; border-radius: 5px">  </input>
-        <br>
-        <button onclick="logIn()" style="margin-top: 15px; border-radius: 20px; background-color: #04e00b;">Log In</button>
-    </div>
-</div>
-</div>
-</body>
+    <body>
+        <header id = "Login">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6" id="one">
+                    <img src="img/Logo.jpg" alt="">
+                    </div>
+                    <div class="col-lg-6" id ="two">
+                        <div class="card text-left">
+                            <div class="card-body">
+                                <h3>Sign in with email</h3>
+                                <div class="form-container">
+                                    <div class="form-group ">
+                                        <label for="Email" class="text-pr">Email</label>
+                                        <input id="username" type="text" class="form-control ip" placeholder="Username">
+                                    </div>
+                                    <div class="form-group ">
+                                        <label for="password" class="text-left text-pr">Password</label>
+                                        <input id="password" type="password" class="form-control ip" placeholder="Password">
+                                    </div>
+                                    <input type="submit" value="Login" class="btn btn-block bg-pr" onclick="doFunc()">
+                            </div>
+                            </div>
+                        </div>
+                    </clo-lg-4>
+                </div>
+            </div>
+        </header>
+
+        <script src="js/jquery.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+    </body>
 </html>
